--- a/descricoes/luis.html
+++ b/descricoes/luis.html
@@ -1,7 +1,7 @@
 
 
 
-<div id="luis-g.-silva-e-silva" class="section level1">
+<div id="luís-g.-silva-e-silva" class="section level1">
 <h1>Luís G. Silva e Silva</h1>
 <!-- Duas colunas -->
 <div class="col2">
